@@ -278,8 +278,9 @@ $UNSET ac_cv_header_stroke_h
 $UNSET ac_cv_lib_stroke_stroke_init
 dnl Add in X_LIBS for MOUSE_DROPPINGS?
 dnl As of 23/Mar/2000 the only libstroke RPM has /usr/X11R6/include/stroke.h
-smr_CHECK_LIB(stroke, , mouse strokes recognition, stroke_init, stroke.h,
-          $X_LIBS, $X_CFLAGS -I/usr/X11R6/include)
+smr_CHECK_LIB(stroke, , mouse strokes recognition,
+	stroke_init, stroke.h,
+	[$X_LIBS -lX11], $X_CFLAGS -I/usr/X11R6/include)
 test "$stroke_LIBS" && AC_DEFINE(HAVE_STROKE)
 AC_SUBST(stroke_LIBS)
 AC_SUBST(stroke_CFLAGS)
