@@ -27,6 +27,11 @@ Changes in stable release 2.4.5 (not released yet)
 * Fixed pixmap background of FvwmButtons behind buttons with only
   text.
 
+* Fixed a crash in FvwmIconBox when the application provided an
+  illegal icon.
+
+* Fixed a configure problem with libstroke-0.5.1.
+
 Changes in stable release 2.4.4 (16-Dec-2001)
 
 * Minor title drawing fixes.
