@@ -1,3 +1,9 @@
+2002-01-16  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* FvwmIconBox/icons.c (GetIconBitmap):
+	(GetIconWindow):
+	fixed core dump when application has an icon with an illegal depth
+
 2002-01-12  Dominik Vogt  <dominik.vogt@gmx.de>
 
 	* FvwmButtons/draw.c (MakeButton):
