@@ -1,3 +1,12 @@
+2002-01-16  Dominik Vogt  <dominik.vogt@gmx.de>
+
+	* configure.in:
+	fixed building with libstroke-0.5.1 on Solaris8
+
+	* fvwm/icons.c (GetIconBitmap):
+	(GetIconWindow):
+	Ignore client icons that have the wrong depth
+
 2002-01-10  olicha  <olivier.chapuis@free.fr>
 
 	* NEWS:
